# knowledge-fabric

./: .env.example  .gitignore  README-EN.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/: pyproject.toml  requirements-legacy.txt  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/scripts/: archive_url_to_markdown.py  bench_bailian_concurrency.py  flag_domain_mismatch.py  migrate_legacy_themes.py  profile_article_pipeline.py  regen_reading_structure.py  replay_proj_39a354d2c50e.py  rerun_proposer.py  research_writeback.py  run_discover_jobs.py  run_parallel_simulation.py
backend/tests/: test_article_workspace_pipeline.py  test_auto_concept_decider.py  test_auto_pending_store.py  test_auto_pipeline_api.py  test_auto_pipeline_runner.py  test_auto_task_cancel.py  test_auto_theme_proposer.py  test_auto_url_fingerprint.py  test_backward_compat_old_data.py  test_bench_bailian_concurrency.py  test_concept_embedder.py  test_concept_embedding_store.py  test_concept_normalization.py  test_concept_view_api.py  test_cross_concept_discoverer_embedding_fallback.py  test_cross_concept_discoverer_embedding_recall.py  test_cross_concept_discoverer_incremental.py  test_cross_concept_discoverer_stage1_recall.py  test_cross_concept_discoverer_stage2.py  test_cross_concept_discoverer_transient_retry.py  test_cross_concept_relations_batch_keys.py  test_cross_concept_relations_provenance.py  test_discover_job_executor.py  test_discover_job_store.py  test_discover_jobs_api.py  test_discover_skip_log.py  test_discover_worker.py  test_domain_classifier.py  test_e2e_registry_flows.py  test_evolution_log_api.py  (+87 more)
(+433 files in other folders)
